# forky

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  I18N_IMPLEMENTATION_PLAN.md  LICENSE  OPEN_SOURCE_GUIDE.md  PERFORMANCE_REFACTOR_PLAN.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: sync-version.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/git/: commands.rs  mod.rs  recent.rs  repository.rs  validation.rs
src-tauri/src/system/: commands.rs
src-tauri/src/watcher/: commands.rs  mod.rs
src/components/about-modal/: AboutModal.css  AboutModal.tsx
src/components/activity-log-panel/: ActivityLogEntry.tsx  ActivityLogPanel.css  ActivityLogPanel.tsx  index.ts
src/components/add-remote-modal/: AddRemoteModal.css  AddRemoteModal.tsx  index.ts
src/components/alert/: Alert.css  Alert.tsx  (+1 more)
src/hooks/: useFileWatcher.ts  useFocusTrap.ts  useGitOperation.ts  useLocalStorage.ts  usePanelResize.ts  useRepositoryTabs.ts  useTheme.ts  useWindowFocus.ts
src/i18n/: index.ts  useLocale.ts
src/stores/: gitOperationStore.ts  index.ts  modalStore.ts  repositoryStore.ts  uiStore.ts
src/styles/: global.css
src/types/: git.ts
src/utils/: branchNameValidation.ts  branchUtils.ts
(+108 files in other folders)
