[package]
name = "forky"
version = "0.1.1"
description = "A Tauri App"
authors = ["calambrenet"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "forky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-decorum = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
notify-debouncer-mini = "0.4"
base64 = "0.22"

